--- a/themes/burak/assets/scss/_custom.scss
+++ b/themes/burak/assets/scss/_custom.scss
@@ -1,7 +1,7 @@
 body {
-    background-color: $beet;
+    background-color: $metal-darker;
 }
 
 .title a {
-    background-image: linear-gradient(transparent 30px, $red-wine-darker 30px);
+    background-image: linear-gradient(transparent 30px, $metal 30px);
 }
