--- a/themes/burak/layouts/partials/post-preview-content.html
+++ b/themes/burak/layouts/partials/post-preview-content.html
@@ -1,9 +1,14 @@
 <div class="tile is-child box">
     <p class="title">
-        <a class="link is-info">{{ .Page.Title }}</a>
+        <a class="link is-info" href="{{ .Page.URL }}">{{ .Page.Title }}</a>
     </p>
     <p class="subtitle is-6 is-italic">
         written by {{ .Page.Params.Author }} on {{ .Page.PublishDate.Format "January 2, 2006" }}.
     </p>
-    {{ .Page.Content | safeHTML | truncate .truncate }} <a href="{{ .Permalink }}"> Read more.</a>
+    <p>
+    {{ .Page.Content | safeHTML | truncate .truncate }}
+    </p>
+    <p class="link">
+        <a href="{{ .Permalink }}"> Read more.</a>
+    </p>
 </div>
