--- a/themes/burak/layouts/partials/single/nav.html
+++ b/themes/burak/layouts/partials/single/nav.html
@@ -1,12 +1,11 @@
 <nav class="navbar">
     <div class="navbar-brand">
-        <a class="navbar-item">
+        <a class="navbar-item" href="/">
             <i class="far fa-times-circle fa-2x"></i>
         </a>
     </div>
     <div class="navbar-menu">
         <div class="navbar-end">
-            {{ $baseurl := .Site.BaseURL }}
             {{ if .PrevInSection }}
             <a class="navbar-item" href="{{ .PrevInSection.Permalink }}">
                 <i class="fas fa-chevron-left fa-2x"></i>
