--- a/themes/burak/layouts/pages/about.html
+++ b/themes/burak/layouts/pages/about.html
@@ -1,1 +1,18 @@
-WTF
+{{ partial "header.html" . }}
+
+<body>
+    {{ partial "banner.html" . }}
+    <section class="section">
+        <div class="container container-post">
+            <div class="box">
+                <div class="content">
+                    <h1 class="title is-1">{{.Page.Title}}</h1>
+                    <p>
+                        {{.Page.Content}}
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    {{ partial "footer.html" .}}
+</body>
