--- a/themes/burak/layouts/post/single.html
+++ b/themes/burak/layouts/post/single.html
@@ -4,10 +4,10 @@
     {{ partial "banner.html" . }}
     <section class="section">
         <div class="container container-post">
-            {{ partial "single/nav.html" . }}
+            {{ partial "single/post/nav.html" . }}
 
             <div class="box">
-                {{ partial "single/author.html" . }}
+                {{ partial "single/post/author.html" . }}
                 <div class="content">
                     <h1 class="title is-1">{{.Page.Title}}</h1>
                     <p>
@@ -17,5 +17,6 @@
             </div>
         </div>
     </section>
+    {{ partial "subscribe.html" .}}
     {{ partial "footer.html" .}}
 </body>
