--- a/themes/burak/assets/scss/_variables.scss
+++ b/themes/burak/assets/scss/_variables.scss
@@ -15,7 +15,7 @@ $family-opensans: "Open Sans", sans-serif;
 $family-primary: $family-opensans;
 
 $primary: $tangerine;
-$success: black;
+$success: green;
 $info: black;
 
 $navbar-background-color: $metal-darker;
