--- a/themes/burak/layouts/partials/banner.html
+++ b/themes/burak/layouts/partials/banner.html
@@ -4,7 +4,7 @@
             <p class="level-left has-text-centered">
                 <img src="https://bulma.io/images/bulma-type.png" alt="" style="height: 30px;">
             </p>
-            <p class="level-right has-text-centered is-italic has-text-success">
+            <p class="level-right has-text-centered is-italic">
                 The world through the lenses.
             </p>
         </nav>
