--- a/themes/burak/layouts/partials/footer.html
+++ b/themes/burak/layouts/partials/footer.html
@@ -1,10 +1,11 @@
 <footer class="footer">
     <div class="content has-text-centered">
         <p>
-            <strong>Bulma</strong> by
-            <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed
-            <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+            <strong>Original content</strong> written for 
+            <strong>original people.</strong>
+        </p>
+        <p>
+            <a href="mailto:lmno.patrick@gmail.com">Get in touch.</a>
         </p>
     </div>
 </footer>
