--- a/themes/burak/layouts/partials/single/post/modals/share/content.html
+++ b/themes/burak/layouts/partials/single/post/modals/share/content.html
@@ -14,18 +14,7 @@
                 </p>
             </div>
             <nav class="level is-mobile">
-                <div class="level-left">
-                    <a class="level-item" aria-label="retweet">
-                        <span class="icon">
-                            <i class="fab fa-facebook fa-2x"></i>
-                        </span>
-                    </a>
-                    <a class="level-item" aria-label="like">
-                        <span class="icon">
-                            <i class="fab fa-twitter-square fa-2x"></i>
-                        </span>
-                    </a>
-                </div>
+                {{ partial "single/post/modals/share/links.html" . }}
             </nav>
         </div>
     </article>
