Add archive with pagination

--- a/themes/burak/layouts/index.html
+++ b/themes/burak/layouts/index.html
@@ -5,6 +5,7 @@
     <section class="section">
         <div class="container">
             {{ partial "posts-preview.html" . }}
+            {{ partial "menu.html" . }}
         </div>
     </section>
 
