--- a/themes/burak/layouts/partials/banner.html
+++ b/themes/burak/layouts/partials/banner.html
@@ -2,7 +2,9 @@
     <div class="container">
         <nav class="level">
             <p class="level-left has-text-centered">
+                <a href="/">
                 <img src="https://bulma.io/images/bulma-type.png" alt="" style="height: 30px;">
+                </a>
             </p>
             <p class="level-right has-text-centered is-italic">
                 {{ index (shuffle .Site.Data.default.other.quotes) 0 }}
