--- a/themes/burak/layouts/partials/menu.html
+++ b/themes/burak/layouts/partials/menu.html
@@ -1,7 +1,7 @@
 <nav class="level">
     <p class="level-left"></p>
     <p class="level-right has-text-centered has-text-weight-semibold">
-        <a href="/archive">
+        <a href="/posts">
             Older Articles
         </a>
     </p>
