--- a/themes/burak/layouts/index.html
+++ b/themes/burak/layouts/index.html
@@ -4,10 +4,10 @@
     {{ partial "banner.html" . }}
     <section class="section">
         <div class="container">
-            {{ partial "posts-preview.html" . }}
-            {{ partial "menu.html" . }}
+            {{ partial "posts.html" . }}
         </div>
     </section>
 
+{{ partial "subscribe.html" .}}
 {{ partial "footer.html" .}}
 </body>
