--- a/themes/burak/layouts/partials/banner.html
+++ b/themes/burak/layouts/partials/banner.html
@@ -6,7 +6,7 @@
                 <img src="https://bulma.io/images/bulma-type.png" alt="" style="height: 30px;">
                 </a>
             </p>
-            <p class="level-right has-text-centered is-italic">
+            <p class="content level-right has-text-centered is-italic quote">
                 {{ index (shuffle .Site.Data.default.other.quotes) 0 }}
             </p>
         </nav>
