--- a/themes/burak/layouts/partials/footer.html
+++ b/themes/burak/layouts/partials/footer.html
@@ -5,7 +5,9 @@
             <strong>original people.</strong>
         </p>
         <p>
-            <a href="mailto:lmno.patrick@gmail.com">Get in touch.</a>
+            <a href="mailto:lmno.patrick@gmail.com">Get in touch</a>
+            |
+            <a href="/posts">Archive</a>
         </p>
     </div>
 </footer>
