--- a/themes/burak/layouts/partials/subscribe.html
+++ b/themes/burak/layouts/partials/subscribe.html
@@ -1,9 +1,9 @@
-<section class="section">
+<section class="section subscribe-form">
     <div class="container container-post" id="sub">
-        <h1 class="title">Subscribe</h1>
-        <h4 class="subtitle">
-            Receive recently featured articles and thoughts from the writer.
-        </h4>
+        <h3 class="title is-3">Subscribe</h3>
+        <h5 class="subtitle is-5">
+            If you dig this content, you may want to subscribe to our newsletter.
+        </h5>
 
         <div class="field has-addons">
             <div class="control is-expanded">
